--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-  "cSpell.words": [
-    "matterlabs",
-    "thirdweb",
-    "zksync"
-  ]
+  "cSpell.words": ["matterlabs", "navlinks", "thirdweb", "zksync"]
 }
